--- a/benjamin-franklin-wiki.html
+++ b/benjamin-franklin-wiki.html
@@ -11,7 +11,8 @@
 <body>
   <div class="container">
     <h1 id="top">Benjamin Franklin</h1>
-    <section>
+    <section class="contents">
+      <h2 class="contents__title">Contents</h2>
       <ul>
         <li><a href="#section1">Boston</a></li>
         <li><a href="#section2">Move to Philadelphia</a></li>
@@ -71,6 +72,9 @@
       <p>In 1758, the year he ceased writing for the Almanack, he printed Father Abraham's Sermon, also known as The Way to Wealth. Franklin began writing his autobiography in 1771, but it was not published until after his death. It has become one of the classics in the genre of autobiographical non-fiction.[citation needed] Franklin wrote a letter, "Advice to a Friend on Choosing a Mistress", dated June 25, 1745, in which he gives advice to a young man about channeling sexual urges. Due to its licentious nature, it was not published in collections of his papers during the 19th century. Federal court rulings from the mid-to-late 20th century cited the document as a reason for overturning obscenity laws and against censorship.[57]</p>
       <a href="#top" class="back-to-the-top__button">Back to the top</a>
     </section>
+    <footer class="footer">
+      <span>This page was last edited on 13 August 2023, at 05:36 (UTC).</span>
+    </footer>
   </div>
 </body>
 </html>
