--- a/index.html
+++ b/index.html
@@ -11,19 +11,26 @@
 <body>
   <div class="container">
     <h1 id="top">Benjamin Franklin</h1>
-    <section class="contents">
-      <h2 class="contents__title">Contents</h2>
-      <ul>
-        <li><a href="#section1">Boston</a></li>
-        <li><a href="#section2">Move to Philadelphia</a></li>
-        <li><a href="#section3">Junto and library</a></li>
-        <li><a href="#section4">Newspaperman</a></li>
-        <li><a href="#section5">Freemasonry</a></li>
-        <li><a href="#section6">Common-law marriage to Deborah Read</a></li>
-        <li><a href="#section7">William Franklin</a></li>
-        <li><a href="#section8">Success as an author</a></li>
-      </ul>
-    </section>
+    <div class="contents-and-portrait">
+      <section class="contents">
+        <h2 class="h2__title">Contents</h2>
+        <ul>
+          <li><a href="#section1">Boston</a></li>
+          <li><a href="#section2">Move to Philadelphia</a></li>
+          <li><a href="#section3">Junto and library</a></li>
+          <li><a href="#section4">Newspaperman</a></li>
+          <li><a href="#section5">Freemasonry</a></li>
+          <li><a href="#section6">Common-law marriage to Deborah Read</a></li>
+          <li><a href="#section7">William Franklin</a></li>
+          <li><a href="#section8">Success as an author</a></li>
+        </ul>
+      </section>
+      <section class="portrait">
+        <h2 class="">Benjamin Franklin</h2>
+        <img src="Benjamin_Franklin.jpg" alt="Portrait of Benjamin Franklin" class="portrait__img">
+        <span>Portrait by Joseph Duplessis, 1778</span>
+      </section>
+    </div>
     <section id="section1" class="section-wiki">
       <h3>Boston</h3>
       <p>Franklin was born on Milk Street in Boston, Province of Massachusetts Bay on January 17, 1706,[Note 1] and baptized at the Old     South Meeting House in Boston. As a child growing up along the Charles River, Franklin recalled that he was "generally the leader among the boys".[17]</p>
