--- a/index.html
+++ b/index.html
@@ -15,14 +15,31 @@
       <section class="contents">
         <h2 class="h2__title">Contents</h2>
         <ul>
-          <li><a href="#section1">Boston</a></li>
-          <li><a href="#section2">Move to Philadelphia</a></li>
-          <li><a href="#section3">Junto and library</a></li>
-          <li><a href="#section4">Newspaperman</a></li>
-          <li><a href="#section5">Freemasonry</a></li>
-          <li><a href="#section6">Common-law marriage to Deborah Read</a></li>
-          <li><a href="#section7">William Franklin</a></li>
-          <li><a href="#section8">Success as an author</a></li>
+          <li class="sublist__title"><a href="#section1">Early life and education</a></li>
+          <ul class="sublist">
+            <li><a href="#section1">Boston</a></li>
+            <li><a href="#section2">Move to Philadelphia</a></li>
+            <li><a href="#section3">Junto and library</a></li>
+            <li><a href="#section4">Newspaperman</a></li>
+            <li><a href="#section5">Freemasonry</a></li>
+            <li><a href="#section6">Common-law marriage to Deborah Read</a></li>
+            <li><a href="#section7">William Franklin</a></li>
+            <li><a href="#section8">Success as an author</a></li>
+          </ul>
+          <li class="sublist__title"><a href="">Public life</a></li>
+          <ul class="sublist">
+            <li><a href="#section9">Early steps in Pennsylvania</a></li>
+            <li><a href="#section10">Postmaster</a></li>
+            <li><a href="#section11">Decades in London</a></li>
+              <ul class="subsublist">
+                <li><a href="#section12">Political work</a></li>
+                <li><a href="#section13">Scientific work</a></li>
+              </ul> 
+            <li><a href="#section14">Travels around Europe</a></li>
+            <li><a href="#section15">Defending the American cause </a></li>
+            <li><a href="#section16">Agent for British and Hellfire Club membership</a></li>
+            <li><a href="#section17">Coming of revolution</a></li>
+          </ul>
         </ul>
       </section>
       <section class="portrait">
@@ -77,8 +94,8 @@
       <h3>Success as an author</h3>
       <p>In 1733, Franklin began to publish the noted Poor Richard's Almanack (with content both original and borrowed) under the pseudonym Richard Saunders, on which much of his popular reputation is based. He frequently wrote under pseudonyms. He had developed a distinct, signature style that was plain, pragmatic and had a sly, soft but self-deprecating tone with declarative sentences.[55] Although it was no secret that he was the author, his Richard Saunders character repeatedly denied it. "Poor Richard's Proverbs", adages from this almanac, such as "A penny saved is twopence dear" (often misquoted as "A penny saved is a penny earned") and "Fish and visitors stink in three days", remain common quotations in the modern world. Wisdom in folk society meant the ability to provide an apt adage for any occasion, and his readers became well prepared. He sold about ten thousand copies per year—it became an institution.[56] In 1741, Franklin began publishing The General Magazine and Historical Chronicle for all the British Plantations in America. He used the heraldic badge of the Prince of Wales as the cover illustration.</p>
       <p>In 1758, the year he ceased writing for the Almanack, he printed Father Abraham's Sermon, also known as The Way to Wealth. Franklin began writing his autobiography in 1771, but it was not published until after his death. It has become one of the classics in the genre of autobiographical non-fiction.[citation needed] Franklin wrote a letter, "Advice to a Friend on Choosing a Mistress", dated June 25, 1745, in which he gives advice to a young man about channeling sexual urges. Due to its licentious nature, it was not published in collections of his papers during the 19th century. Federal court rulings from the mid-to-late 20th century cited the document as a reason for overturning obscenity laws and against censorship.[57]</p>
-        <a href="#top" class="back-to-the-top__btn">Back to the top</a>
     </section>
+    <a href="#top" class="back-to-the-top__btn">Back to the top</a>
     <footer class="footer">
       <span>This page was last edited on 13 August 2023, at 05:36 (UTC).</span>
     </footer>
