--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </ul>
       </section>
       <section class="portrait">
-        <h2 class="">Benjamin Franklin</h2>
+        <h2 class="h2__title">Benjamin Franklin</h2>
         <img src="Benjamin_Franklin.jpg" alt="Portrait of Benjamin Franklin" class="portrait__img">
         <span>Portrait by Joseph Duplessis, 1778</span>
       </section>
