--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </section>
       <section class="portrait">
         <h2 class="h2__title">Benjamin Franklin</h2>
-        <img src="Benjamin_Franklin.jpg" alt="Portrait of Benjamin Franklin" class="portrait__img">
+        <img src="img/Benjamin_Franklin.jpg" alt="Portrait of Benjamin Franklin" class="portrait__img">
         <span>Portrait by Joseph Duplessis, 1778</span>
       </section>
     </div>
