--- a/index.html
+++ b/index.html
@@ -12,35 +12,40 @@
   <div class="container">
     <h1 id="top">Benjamin Franklin</h1>
     <div class="contents-and-portrait">
-      <section class="contents">
-        <h2 class="h2__title">Contents</h2>
-        <ul>
-          <li class="sublist__title"><a href="#section-title1">Early life and education</a></li>
-          <ul class="sublist">
-            <li><a href="#section1">Boston</a></li>
-            <li><a href="#section2">Move to Philadelphia</a></li>
-            <li><a href="#section3">Junto and library</a></li>
-            <li><a href="#section4">Newspaperman</a></li>
-            <li><a href="#section5">Freemasonry</a></li>
-            <li><a href="#section6">Common-law marriage to Deborah Read</a></li>
-            <li><a href="#section7">William Franklin</a></li>
-            <li><a href="#section8">Success as an author</a></li>
+      <section class="main-info-content">
+        <section class="main-info">
+          <p><span class="font-weight-700">Benjamin Franklin</span> (January 17, 1706 [O.S. January 6, 1705][Note 1] – April 17, 1790) was an American polymath who was active as a writer, scientist, inventor, statesman, diplomat, printer, publisher, and political philosopher.[1] Among the leading intellectuals of his time, Franklin was one of the Founding Fathers of the United States, a drafter and signer of the Declaration of Independence, and the first postmaster general.[2]</p>
+        </section>
+        <section class="contents">
+          <h2 class="h2__title">Contents</h2>
+          <ul>
+            <li class="sublist__title"><a href="#section-title1">Early life and education</a></li>
+            <ul class="sublist">
+              <li><a href="#section1">Boston</a></li>
+              <li><a href="#section2">Move to Philadelphia</a></li>
+              <li><a href="#section3">Junto and library</a></li>
+              <li><a href="#section4">Newspaperman</a></li>
+              <li><a href="#section5">Freemasonry</a></li>
+              <li><a href="#section6">Common-law marriage to Deborah Read</a></li>
+              <li><a href="#section7">William Franklin</a></li>
+              <li><a href="#section8">Success as an author</a></li>
+            </ul>
+            <li class="sublist__title"><a href="#section-title2">Public life</a></li>
+            <ul class="sublist">
+              <li><a href="#section9">Early steps in Pennsylvania</a></li>
+              <li><a href="#section10">Postmaster</a></li>
+              <li><a href="#section11">Decades in London</a></li>
+                <ul class="subsublist">
+                  <li><a href="#section12">Political work</a></li>
+                  <li><a href="#section13">Scientific work</a></li>
+                </ul> 
+              <li><a href="#section14">Travels around Europe</a></li>
+              <li><a href="#section15">Defending the American cause </a></li>
+              <li><a href="#section16">Agent for British and Hellfire Club membership</a></li>
+              <li><a href="#section17">Coming of revolution</a></li>
+            </ul>
           </ul>
-          <li class="sublist__title"><a href="#section-title2">Public life</a></li>
-          <ul class="sublist">
-            <li><a href="#section9">Early steps in Pennsylvania</a></li>
-            <li><a href="#section10">Postmaster</a></li>
-            <li><a href="#section11">Decades in London</a></li>
-              <ul class="subsublist">
-                <li><a href="#section12">Political work</a></li>
-                <li><a href="#section13">Scientific work</a></li>
-              </ul> 
-            <li><a href="#section14">Travels around Europe</a></li>
-            <li><a href="#section15">Defending the American cause </a></li>
-            <li><a href="#section16">Agent for British and Hellfire Club membership</a></li>
-            <li><a href="#section17">Coming of revolution</a></li>
-          </ul>
-        </ul>
+        </section>
       </section>
       <section class="portrait">
         <h2 class="h2__title">Benjamin Franklin</h2>
