--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <section class="portrait">
           <h2 class="h2__title">Benjamin Franklin</h2>
           <img src="img/Benjamin_Franklin.jpg" alt="Portrait of Benjamin Franklin" class="portrait__img">
-          <span>Portrait by Joseph Duplessis, 1778</span>        
+          <span class="portrait-by">Portrait by Joseph Duplessis, 1778</span>        
         </section>
         <section class="contents">
           <h2 class="h2__title">Contents</h2>
