--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 <body>
   <div class="container">
     <h1 id="top">Benjamin Franklin</h1>
-    <div class="contents-and-portrait row">
-      <section class="main-info col-lg-8 col-md-6">
+    <section class="contents-and-portrait row">
+      <div class="main-info col-lg-8 col-md-6">
           <p><span class="font-weight-700">Benjamin Franklin</span> (January 17, 1706 [O.S. January 6, 1705][Note 1] – April 17, 1790) was an American polymath who was active as a writer, scientist, inventor, statesman, diplomat, printer, publisher, and political philosopher.[1] Among the leading intellectuals of his time, Franklin was one of the Founding Fathers of the United States, a drafter and signer of the Declaration of Independence, and the first postmaster general.[2]</p>
           <p>As a scientist, he was a major figure in the American Enlightenment and the history of physics for his studies of electricity, and for charting and naming the Gulf Stream current. As an inventor, he is known for the lightning rod, bifocals, and the Franklin stove, among others.[3] He founded many civic organizations, including the Library Company, Philadelphia's first fire department,[4] and the University of Pennsylvania.[5] Franklin earned the title of "The First American" for his early and indefatigable campaigning for colonial unity, and as an author and spokesman in London for several colonies. As the first U.S. ambassador to France, he exemplified the emerging American nation.[6] Franklin was foundational in defining the American ethos as a marriage of the practical values of thrift, hard work, education, community spirit, self-governing institutions, and opposition to authoritarianism both political and religious, with the scientific and tolerant values of the Enlightenment. In the words of historian Henry Steele Commager, "In Franklin could be merged the virtues of Puritanism without its defects, the illumination of the Enlightenment without its heat."[7] Franklin has been called "the most accomplished American of his age and the most influential in inventing the type of society America would become."[8]</p>
           <p>Franklin became a successful newspaper editor and printer in Philadelphia, the leading city in the colonies, publishing the Pennsylvania Gazette at age 23.[9] He became wealthy publishing this and Poor Richard's Almanack, which he wrote under the pseudonym "Richard Saunders".[10] After 1767, he was associated with the Pennsylvania Chronicle, a newspaper that was known for its revolutionary sentiments and criticisms of the policies of the British Parliament and the Crown.[11]</p>
           <p>He pioneered and was the first president of the Academy and College of Philadelphia, which opened in 1751 and later became the University of Pennsylvania. He organized and was the first secretary of the American Philosophical Society and was elected president in 1769. Franklin became a national hero in America as an agent for several colonies when he spearheaded an effort in London to have the Parliament of Great Britain repeal the unpopular Stamp Act. An accomplished diplomat, he was widely admired among the French as American minister to Paris and was a major figure in the development of positive Franco–American relations. His efforts proved vital for the American Revolution in securing French aid.</p>
           <p>He was promoted to deputy postmaster-general for the British colonies on August 10, 1753,[12] having been Philadelphia postmaster for many years, and this enabled him to set up the first national communications network. He was active in community affairs and colonial and state politics, as well as national and international affairs. From 1785 to 1788, he served as governor of Pennsylvania. He initially owned and dealt in slaves but, by the late 1750s, he began arguing against slavery, became an abolitionist, and promoted education and the integration of African Americans into U.S. society.</p>
           <p>His life and legacy of scientific and political achievement, and his status as one of America's most influential Founding Fathers, have seen Franklin honored more than two centuries after his death on the $100 bill, warships, and the names of many towns, counties, educational institutions, and corporations, as well as numerous cultural references and with a portrait in the Oval Office. Over his lifetime, Franklin wrote or received more than 30,000 letters and other documents, which since the 1950s have been collected in The Papers of Benjamin Franklin, published by both the American Philosophical Society and Yale University.</p>
-      </section>
-      <section class="portrait-contents col-lg-4 col-md-6">
+      </div>
+      <div class="portrait-contents col-lg-4 col-md-6">
         <section class="portrait">
           <h2 class="h2__title">Benjamin Franklin</h2>
           <img src="img/Benjamin_Franklin.jpg" alt="Portrait of Benjamin Franklin" class="portrait__img">
@@ -57,8 +57,8 @@
             </ul>
           </ul>
         </section>
-      </section>
-    </div>
+      </div>
+    </section>
     <h2 class="section-title" id="section-title1">Early life and education</h2>
     <section id="section1" class="section-wiki">
       <h3>Boston</h3>
