--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -8,8 +8,22 @@
   <title>Module 2 Solution</title>
 </head>
 <body>
-  <div class="container">
+  <section class="container">
     <h1 class="title">Our Menu</h1>
-  </div>
+    <div class="row">
+      <section class="section">
+        <h2 class="section__title">Chicken</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam non quas nam repellendus facilis suscipit vitae excepturi dolor harum architecto voluptates, inventore minima vero possimus blanditiis mollitia, similique illum. Quidem.</p>
+      </section>
+      <section class="section">
+        <h2 class="section__title">Beef</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta architecto consequuntur corporis sed et laudantium repudiandae commodi eum vero amet. Id consequatur atque nulla ipsam aut aspernatur similique quibusdam a.</p>
+      </section>
+      <section class="section">
+        <h2 class="section__title">Sushi</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, voluptatibus provident! Natus aperiam accusamus fuga, ea veritatis beatae iste eaque facere, vel assumenda amet. Fuga fugiat asperiores deleniti iusto dolorem.</p>
+      </section>
+    </div>
+  </section>
 </body>
 </html>
