Module 2 Solution finished

--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -11,17 +11,23 @@
   <section class="container">
     <h1 class="title">Our Menu</h1>
     <div class="row">
-      <section class="section">
-        <h2 class="section__title">Chicken</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam non quas nam repellendus facilis suscipit vitae excepturi dolor harum architecto voluptates, inventore minima vero possimus blanditiis mollitia, similique illum. Quidem.</p>
+      <section class="section-container">
+        <div class="section">
+          <h2 class="section__title">Chicken</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, voluptatibus provident! Natus aperiam accusamus fuga, ea veritatis beatae iste eaque facere, vel assumenda amet. Fuga fugiat asperiores deleniti iusto dolorem.</p>
+        </div>
+        </section>
+      <section class="section-container">
+        <div class="section">
+          <h2 class="section__title background-color__yellow">Beef</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, voluptatibus provident! Natus aperiam accusamus fuga, ea veritatis beatae iste eaque facere, vel assumenda amet. Fuga fugiat asperiores deleniti iusto dolorem.</p>
+        </div>
       </section>
-      <section class="section">
-        <h2 class="section__title">Beef</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta architecto consequuntur corporis sed et laudantium repudiandae commodi eum vero amet. Id consequatur atque nulla ipsam aut aspernatur similique quibusdam a.</p>
-      </section>
-      <section class="section">
-        <h2 class="section__title">Sushi</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, voluptatibus provident! Natus aperiam accusamus fuga, ea veritatis beatae iste eaque facere, vel assumenda amet. Fuga fugiat asperiores deleniti iusto dolorem.</p>
+      <section class="section-container col-md-12">
+        <div class="section">
+          <h2 class="section__title background-color__blue">Sushi</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, voluptatibus provident! Natus aperiam accusamus fuga, ea veritatis beatae iste eaque facere, vel assumenda amet. Fuga fugiat asperiores deleniti iusto dolorem.</p>
+        </div>
       </section>
     </div>
   </section>
