--- a/module3-project/index.html
+++ b/module3-project/index.html
@@ -10,13 +10,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
   <!-- styles -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/style.css">
-  <title>Restaurant</title>
+  <link rel="icon" href="img/restaurant-logo_small.png">
+  <title>David Chu's China Bistro</title>
 </head>
 <body>
   <header class="header">
     <nav class="header-nav navbar navbar-default">
-      <div class="container">
+      <div class="container d-flex align-center justify-space-between header-content">
         <div class="navbar-header d-flex">
           <a href="index.html" class="invisible-sm">
             <div class="logo-img" alt="Logo Image"></div>        
@@ -29,9 +31,26 @@
             </p>
           </div>
         </div>
+        <div class="main-header-nav">
+          <a href="#">
+            <span class="glyphicon glyphicon-cutlery"></span>
+            Menu
+          </a>
+          <a href="#">
+            <span class="glyphicon glyphicon-info-sign"></span>
+            About
+          </a>
+          <a href="#">
+            <span class="glyphicon glyphicon-certificate"></span>
+            Awards
+          </a>
+          <a href="tel:410-602-5008"><span>410-602-5008</span></a>
+          <div>We Deliver</div>
+        </div>
       </div>
     </nav>
-  </header>  
+  </header>
+  <!-- <script src="js/burger.js"></script> -->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
