--- a/module3-project/index.html
+++ b/module3-project/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/style.css">
+  <!-- icon -->
   <link rel="icon" href="img/restaurant-logo_small.png">
   <title>David Chu's China Bistro</title>
 </head>
@@ -44,8 +45,10 @@
             <span class="glyphicon glyphicon-certificate"></span>
             Awards
           </a>
-          <a href="tel:410-602-5008"><span>410-602-5008</span></a>
-          <div>We Deliver</div>
+          <div class="phone">
+            <a href="tel:410-602-5008"><span>410-602-5008</span></a>
+            <div>We Deliver</div>
+          </div>
         </div>
       </div>
     </nav>
