--- a/module3-project/index.html
+++ b/module3-project/index.html
@@ -16,7 +16,7 @@
   <link rel="icon" href="img/restaurant-logo_small.png">
   <title>David Chu's China Bistro</title>
 </head>
-<body>
+<body class="body">
   <header class="header">
     <nav class="header-nav navbar navbar-default">
       <div class="container d-flex align-center justify-space-between header-content">
@@ -32,7 +32,7 @@
             </p>
           </div>
         </div>
-        <div class="main-header-nav">
+        <div class="main-header-nav d-flex">
           <a href="#">
             <span class="glyphicon glyphicon-cutlery"></span>
             Menu
@@ -50,10 +50,15 @@
             <div>We Deliver</div>
           </div>
         </div>
+        <button class="burger">
+          <div class="burger-line"></div>
+          <div class="burger-line"></div>
+          <div class="burger-line"></div>
+       </button>
       </div>
     </nav>
   </header>
-  <!-- <script src="js/burger.js"></script> -->
+  <script src="js/burger.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
